// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendVoteTransaction should render 1`] = `
<DocumentFragment>
  <div
    class="max-w-xl py-16 mx-auto"
  >
    <form
      class="space-y-8"
      data-testid="Form"
    >
      <div>
        <ul
          class="StepIndicator___StyledUl-sc-15t41is-1 dhAbBb"
        >
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 crUtTP"
          />
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
          />
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
          />
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
          />
        </ul>
        <div
          class="mt-10"
        >
          <div
            data-testid="tab-pabel__active-panel"
          >
            <section
              class="space-y-8"
              data-testid="SendVoteTransaction__step--first"
            >
              <div>
                <h1
                  class="mb-0"
                >
                  Vote Transaction
                </h1>
                <p
                  class="text-theme-neutral-dark"
                >
                  Select a fee to continue
                </p>
              </div>
              <div
                class="grid grid-flow-row gap-2"
              >
                <div
                  class="flex items-center py-6 true "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                      Cryptoasset
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="text-theme-neutral-800 max-w-24 flex-auto text-xl font-semibold truncate"
                      >
                        ARK Ecosystem
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-1"
                  >
                    <div
                      class="sc-AxiKw jQtkkF bg-theme-background border-theme-danger-200"
                    >
                      <div
                        class="sc-AxhUy hSYVGy text-theme-danger-500"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                       
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="text-theme-neutral-500 mb-2 text-sm font-semibold"
                      >
                        <span
                          class="mr-1"
                        >
                          Sender
                        </span>
                        <div
                          class="sc-fznyAO dkNXHq"
                          color="warning"
                        >
                          Your address
                        </div>
                      </div>
                      <div
                        class="inline-block truncate align-middle"
                      >
                        <span
                          class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                          data-testid="address__wallet-name"
                        >
                          ROBank
                        </span>
                        <span
                          class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-xl"
                          data-testid="address__wallet-address"
                        >
                          AUexKj…EVTQWK
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gUuAHk"
                    data-testid="Avatar"
                  >
                    <div
                      class="overflow-hidden rounded-full"
                    >
                      <img
                        alt="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                        title="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                      Votes
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="-my-5"
                      >
                        <div
                          class="flex items-center py-6 true "
                        >
                          <div
                            class="flex-1"
                          >
                            <div
                              class="text-sm font-semibold text-theme-neutral-500"
                            >
                               
                            </div>
                            <div
                              class="mt-2 font-semibold"
                            >
                              <div
                                class="inline-block truncate align-middle"
                              >
                                <span
                                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                                  data-testid="address__wallet-name"
                                >
                                  Delegate 1
                                </span>
                                <span
                                  class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-xl"
                                  data-testid="address__wallet-address"
                                >
                                  FJKDSA…SJKDFJ
                                </span>
                              </div>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gUuAHk"
                            data-testid="Avatar"
                          >
                            <div
                              class="overflow-hidden rounded-full"
                            >
                              <img
                                alt="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/></svg>"
                                title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                        >
                          <div
                            class="flex-1"
                          >
                            <div
                              class="text-sm font-semibold text-theme-neutral-500"
                            >
                               
                            </div>
                            <div
                              class="mt-2 font-semibold"
                            >
                              <div
                                class="inline-block truncate align-middle"
                              >
                                <span
                                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                                  data-testid="address__wallet-name"
                                >
                                  Delegate 2
                                </span>
                                <span
                                  class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-xl"
                                  data-testid="address__wallet-address"
                                >
                                  AhFJKD…SJKDFJ
                                </span>
                              </div>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gUuAHk"
                            data-testid="Avatar"
                          >
                            <div
                              class="overflow-hidden rounded-full"
                            >
                              <img
                                alt="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 152, 0)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                                title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                        >
                          <div
                            class="flex-1"
                          >
                            <div
                              class="text-sm font-semibold text-theme-neutral-500"
                            >
                               
                            </div>
                            <div
                              class="mt-2 font-semibold"
                            >
                              <div
                                class="inline-block truncate align-middle"
                              >
                                <span
                                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                                  data-testid="address__wallet-name"
                                >
                                  Delegate 3
                                </span>
                                <span
                                  class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-xl"
                                  data-testid="address__wallet-address"
                                >
                                  FAhFJK…SJKDFJ
                                </span>
                              </div>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gUuAHk"
                            data-testid="Avatar"
                          >
                            <div
                              class="overflow-hidden rounded-full"
                            >
                              <img
                                alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                                title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                      Transaction Fee
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="w-3/5 mr-2"
                        >
                          <div
                            class="sc-fzozJi OgXfh"
                          >
                            <input
                              class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 "
                              data-testid="InputCurrency"
                              type="text"
                              value="25"
                            />
                            <div
                              class="absolute bottom-0 w-full px-1"
                            >
                              <div
                                class="flex flex-wrap justify-center"
                                data-testid="Range"
                              >
                                <div
                                  class="sc-fzoLsD gcqOdX"
                                  data-testid="Range__track"
                                  style="transform: scale(1); cursor: pointer;"
                                >
                                  <div
                                    class="sc-fzpans fDmiZy"
                                    data-testid="Range__track__filled"
                                  >
                                    <div
                                      aria-valuemax="100"
                                      aria-valuemin="1"
                                      aria-valuenow="25"
                                      class="sc-fzplWN eSQZBV"
                                      data-testid="Range__thumb"
                                      draggable="false"
                                      role="slider"
                                      style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ml-2"
                        >
                          <div
                            class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300 shadow-sm"
                            data-testid="SelectionBar"
                            role="radiogroup"
                          >
                            <button
                              aria-checked="true"
                              class="sc-fznKkj kMcNmk relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                              data-testid="SelectionBarOption"
                              role="radio"
                            >
                              Last
                            </button>
                            <button
                              aria-checked="false"
                              class="sc-fznKkj kMcNmk relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                              data-testid="SelectionBarOption"
                              role="radio"
                            >
                              Min
                            </button>
                            <button
                              aria-checked="false"
                              class="sc-fznKkj kMcNmk relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                              data-testid="SelectionBarOption"
                              role="radio"
                            >
                              Average
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </div>
          <div
            class="flex justify-end mt-6 space-x-3"
          >
            <button
              class="sc-AxirZ fhzkRl"
              color="primary"
              data-testid="SendVoteTransaction__button--back"
              disabled=""
              type="button"
            >
              Back
            </button>
            <button
              class="sc-AxirZ dPtiuf"
              color="primary"
              data-testid="SendVoteTransaction__button--continue"
              type="button"
            >
              Continue
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SendVoteTransaction should render 1st step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="SendVoteTransaction__step--first"
  >
    <div>
      <h1
        class="mb-0"
      >
        Vote Transaction
      </h1>
      <p
        class="text-theme-neutral-dark"
      >
        Select a fee to continue
      </p>
    </div>
    <div
      class="grid grid-flow-row gap-2"
    >
      <div
        class="flex items-center py-6 true "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Cryptoasset
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="text-theme-neutral-800 max-w-24 flex-auto text-xl font-semibold truncate"
            >
              ARK Ecosystem
            </div>
          </div>
        </div>
        <div
          class="ml-1"
        >
          <div
            class="sc-AxiKw jQtkkF bg-theme-background border-theme-danger-200"
          >
            <div
              class="sc-AxhUy hSYVGy text-theme-danger-500"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
             
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="text-theme-neutral-500 mb-2 text-sm font-semibold"
            >
              <span
                class="mr-1"
              >
                Sender
              </span>
              <div
                class="sc-fznyAO dkNXHq"
                color="warning"
              >
                Your address
              </div>
            </div>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                data-testid="address__wallet-name"
              >
                ROBank
              </span>
              <span
                class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-xl"
                data-testid="address__wallet-address"
              >
                AUexKj…EVTQWK
              </span>
            </div>
          </div>
        </div>
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gUuAHk"
          data-testid="Avatar"
        >
          <div
            class="overflow-hidden rounded-full"
          >
            <img
              alt="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
              title="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
            />
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Votes
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="-my-5"
            >
              <div
                class="flex items-center py-6 true "
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="text-sm font-semibold text-theme-neutral-500"
                  >
                     
                  </div>
                  <div
                    class="mt-2 font-semibold"
                  >
                    <div
                      class="inline-block truncate align-middle"
                    >
                      <span
                        class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                        data-testid="address__wallet-name"
                      >
                        Delegate 1
                      </span>
                      <span
                        class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-xl"
                        data-testid="address__wallet-address"
                      >
                        FJKDSA…SJKDFJ
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gUuAHk"
                  data-testid="Avatar"
                >
                  <div
                    class="overflow-hidden rounded-full"
                  >
                    <img
                      alt="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/></svg>"
                      title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="text-sm font-semibold text-theme-neutral-500"
                  >
                     
                  </div>
                  <div
                    class="mt-2 font-semibold"
                  >
                    <div
                      class="inline-block truncate align-middle"
                    >
                      <span
                        class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                        data-testid="address__wallet-name"
                      >
                        Delegate 2
                      </span>
                      <span
                        class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-xl"
                        data-testid="address__wallet-address"
                      >
                        AhFJKD…SJKDFJ
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gUuAHk"
                  data-testid="Avatar"
                >
                  <div
                    class="overflow-hidden rounded-full"
                  >
                    <img
                      alt="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 152, 0)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                      title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="text-sm font-semibold text-theme-neutral-500"
                  >
                     
                  </div>
                  <div
                    class="mt-2 font-semibold"
                  >
                    <div
                      class="inline-block truncate align-middle"
                    >
                      <span
                        class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                        data-testid="address__wallet-name"
                      >
                        Delegate 3
                      </span>
                      <span
                        class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-xl"
                        data-testid="address__wallet-address"
                      >
                        FAhFJK…SJKDFJ
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gUuAHk"
                  data-testid="Avatar"
                >
                  <div
                    class="overflow-hidden rounded-full"
                  >
                    <img
                      alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                      title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Transaction Fee
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="flex"
            >
              <div
                class="w-3/5 mr-2"
              >
                <div
                  class="sc-fzozJi OgXfh"
                >
                  <input
                    class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 "
                    data-testid="InputCurrency"
                    type="text"
                    value="25"
                  />
                  <div
                    class="absolute bottom-0 w-full px-1"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="sc-fzoLsD gcqOdX"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="sc-fzpans fDmiZy"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="100"
                            aria-valuemin="1"
                            aria-valuenow="25"
                            class="sc-fzplWN eSQZBV"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ml-2"
              >
                <div
                  class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300 shadow-sm"
                  data-testid="SelectionBar"
                  role="radiogroup"
                >
                  <button
                    aria-checked="true"
                    class="sc-fznKkj kMcNmk relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                    data-testid="SelectionBarOption"
                    role="radio"
                  >
                    Last
                  </button>
                  <button
                    aria-checked="false"
                    class="sc-fznKkj kMcNmk relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                    data-testid="SelectionBarOption"
                    role="radio"
                  >
                    Min
                  </button>
                  <button
                    aria-checked="false"
                    class="sc-fznKkj kMcNmk relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                    data-testid="SelectionBarOption"
                    role="radio"
                  >
                    Average
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendVoteTransaction should render 2st step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="SendVoteTransaction__step--second"
  >
    <div>
      <h1
        class="mb-0"
      >
        Transaction Review
      </h1>
      <p
        class="text-theme-neutral-dark"
      >
        Review the transaction details
      </p>
    </div>
    <div
      class="grid grid-flow-row gap-2"
    >
      <div
        class="flex items-center py-6 true "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Cryptoasset
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="text-theme-neutral-800 max-w-24 flex-auto text-xl font-semibold truncate"
            >
              ARK Ecosystem
            </div>
          </div>
        </div>
        <div
          class="ml-1"
        >
          <div
            class="sc-AxiKw jQtkkF bg-theme-background border-theme-danger-200"
          >
            <div
              class="sc-AxhUy hSYVGy text-theme-danger-500"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
             
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="text-theme-neutral-500 mb-2 text-sm font-semibold"
            >
              <span
                class="mr-1"
              >
                Sender
              </span>
              <div
                class="sc-fznyAO dkNXHq"
                color="warning"
              >
                Your address
              </div>
            </div>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                data-testid="address__wallet-name"
              >
                ROBank
              </span>
              <span
                class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-xl"
                data-testid="address__wallet-address"
              >
                AUexKj…EVTQWK
              </span>
            </div>
          </div>
        </div>
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gUuAHk"
          data-testid="Avatar"
        >
          <div
            class="overflow-hidden rounded-full"
          >
            <img
              alt="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
              title="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
            />
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Votes
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="-my-5"
            >
              <div
                class="flex items-center py-6 true "
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="text-sm font-semibold text-theme-neutral-500"
                  >
                     
                  </div>
                  <div
                    class="mt-2 font-semibold"
                  >
                    <div
                      class="inline-block truncate align-middle"
                    >
                      <span
                        class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                        data-testid="address__wallet-name"
                      >
                        Delegate 1
                      </span>
                      <span
                        class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-xl"
                        data-testid="address__wallet-address"
                      >
                        FJKDSA…SJKDFJ
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gUuAHk"
                  data-testid="Avatar"
                >
                  <div
                    class="overflow-hidden rounded-full"
                  >
                    <img
                      alt="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/></svg>"
                      title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="text-sm font-semibold text-theme-neutral-500"
                  >
                     
                  </div>
                  <div
                    class="mt-2 font-semibold"
                  >
                    <div
                      class="inline-block truncate align-middle"
                    >
                      <span
                        class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                        data-testid="address__wallet-name"
                      >
                        Delegate 2
                      </span>
                      <span
                        class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-xl"
                        data-testid="address__wallet-address"
                      >
                        AhFJKD…SJKDFJ
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gUuAHk"
                  data-testid="Avatar"
                >
                  <div
                    class="overflow-hidden rounded-full"
                  >
                    <img
                      alt="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 152, 0)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                      title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="text-sm font-semibold text-theme-neutral-500"
                  >
                     
                  </div>
                  <div
                    class="mt-2 font-semibold"
                  >
                    <div
                      class="inline-block truncate align-middle"
                    >
                      <span
                        class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                        data-testid="address__wallet-name"
                      >
                        Delegate 3
                      </span>
                      <span
                        class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-xl"
                        data-testid="address__wallet-address"
                      >
                        FAhFJK…SJKDFJ
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gUuAHk"
                  data-testid="Avatar"
                >
                  <div
                    class="overflow-hidden rounded-full"
                  >
                    <img
                      alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                      title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="my-4"
      >
        <div
          class="border rounded-lg border-theme-neutral-300"
        >
          <div
            class="relative p-3"
          >
            <div
              class="grid grid-cols-2 divide-x divide-gray-400"
            >
              <div
                class="flex flex-col justify-center px-6 py-5"
              >
                <span
                  class="text-sm text-theme-neutral-500"
                >
                  Transaction(s) Amount
                </span>
                <span
                  class="mt-2 font-semibold"
                  data-testid="total-amount-box__transaction-amount"
                >
                  400 ARK
                </span>
              </div>
              <div
                class="flex flex-col justify-center px-6 py-5 text-right"
              >
                <span
                  class="text-sm text-theme-neutral-500"
                >
                  Transaction fee
                </span>
                <span
                  class="mt-2 text-lg font-semibold"
                  data-testid="total-amount-box__transaction-fee"
                >
                  0.09660435 ARK
                </span>
              </div>
            </div>
            <div
              class="absolute top-0 bottom-0 left-0 right-0 flex items-center justify-center h-full text-center"
            >
              <div
                class="px-1 py-2 bg-white"
              >
                <div
                  class="sc-AxhUy cIoObu"
                  height="15"
                  width="15"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col items-center border-t rounded-b-lg border-theme-neutral-300 justfiy-center py-7 bg-theme-neutral-100"
          >
            <span
              class="text-sm text-theme-neutral-500"
            >
              Total Amount
            </span>
            <span
              class="text-2xl font-bold"
              data-testid="total-amount-box__total"
            >
              400.09660435 ARK
            </span>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendVoteTransaction should render 3st step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="SendVoteTransaction__step--third"
  >
    <div>
      <h1
        class="mb-0"
      >
        Authenticate
      </h1>
      <p
        class="text-theme-neutral-dark"
      >
        Enter your twelve word mnemonic to authenticate the transaction
      </p>
      <div
        class="grid grid-flow-row gap-2"
      >
        <div
          class="flex items-center py-6 true "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Mnemonic
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="sc-fzozJi OgXfh max-w-20"
              >
                <input
                  class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 pr-12"
                  data-testid="Input"
                  name="passphrase"
                  type="password"
                />
                <div
                  class="sc-AxheI sc-AxmLO ecniej my-px mr-4"
                >
                  <button
                    class="flex items-center justify-center w-full h-full text-2xl focus:outline-none bg-theme-background text-theme-primary-400"
                    data-testid="InputPassword__toggle"
                    type="button"
                  >
                    <div
                      class="sc-AxhUy cPXLjK"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        eye.svg
                      </svg>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendVoteTransaction should render 4st step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="SendVoteTransaction__step--fourth"
  >
    <div>
      <h1
        class="mb-0"
      >
        Transaction Successful
      </h1>
      <div
        class="grid grid-flow-row gap-2"
      >
        <div
          class="w-full mt-10"
        >
          <div
            class="sc-AxhUy HCyRQ"
            height="200"
            width="100%"
          />
        </div>
        <p
          class="text-theme-neutral-dark"
        >
          Your transaction was successfully sent. Please monitor the blockchain to ensure your transactions is confirmed and processed, The following is relevant information for your transaction.
        </p>
        <div
          class="flex items-center py-6 true "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              ID
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="inline-block truncate align-middle"
                  >
                    <span
                      class="sc-AxjAm StDqN text-theme-primary font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      AUexKjGtgsSpVz…MM6vJ6znEVTQWK
                    </span>
                  </div>
                </div>
                <div
                  class="text-theme-primary-300 mb-1 ml-5"
                >
                  <div
                    class="sc-AxhUy cPXLjK"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Block ID
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="inline-block truncate align-middle"
                  >
                    <span
                      class="sc-AxjAm StDqN text-theme-primary font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      AUexKjGtgsSpVz…MM6vJ6znEVTQWK
                    </span>
                  </div>
                </div>
                <div
                  class="text-theme-primary-300 mb-1 ml-5"
                >
                  <div
                    class="sc-AxhUy cPXLjK"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Cryptoasset
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="text-theme-neutral-800 max-w-24 flex-auto text-xl font-semibold truncate"
              >
                ARK Ecosystem
              </div>
            </div>
          </div>
          <div
            class="ml-1"
          >
            <div
              class="sc-AxiKw jQtkkF bg-theme-background border-theme-danger-200"
            >
              <div
                class="sc-AxhUy hSYVGy text-theme-danger-500"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
               
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="text-theme-neutral-500 mb-2 text-sm font-semibold"
              >
                <span
                  class="mr-1"
                >
                  Account
                </span>
                <div
                  class="sc-fznyAO dkNXHq"
                  color="warning"
                >
                  Your address
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                  data-testid="address__wallet-name"
                >
                  ROBank
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-xl"
                  data-testid="address__wallet-address"
                >
                  AUexKj…EVTQWK
                </span>
              </div>
            </div>
          </div>
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gUuAHk"
            data-testid="Avatar"
          >
            <div
              class="overflow-hidden rounded-full"
            >
              <img
                alt="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                title="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
              />
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Votes
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="-my-5"
              >
                <div
                  class="flex items-center py-6 true "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                       
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="inline-block truncate align-middle"
                      >
                        <span
                          class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                          data-testid="address__wallet-name"
                        >
                          Delegate 1
                        </span>
                        <span
                          class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-xl"
                          data-testid="address__wallet-address"
                        >
                          FJKDSA…SJKDFJ
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gUuAHk"
                    data-testid="Avatar"
                  >
                    <div
                      class="overflow-hidden rounded-full"
                    >
                      <img
                        alt="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/></svg>"
                        title="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                       
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="inline-block truncate align-middle"
                      >
                        <span
                          class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                          data-testid="address__wallet-name"
                        >
                          Delegate 2
                        </span>
                        <span
                          class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-xl"
                          data-testid="address__wallet-address"
                        >
                          AhFJKD…SJKDFJ
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gUuAHk"
                    data-testid="Avatar"
                  >
                    <div
                      class="overflow-hidden rounded-full"
                    >
                      <img
                        alt="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 152, 0)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                        title="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                       
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="inline-block truncate align-middle"
                      >
                        <span
                          class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-xl"
                          data-testid="address__wallet-name"
                        >
                          Delegate 3
                        </span>
                        <span
                          class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-xl"
                          data-testid="address__wallet-address"
                        >
                          FAhFJK…SJKDFJ
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gUuAHk"
                    data-testid="Avatar"
                  >
                    <div
                      class="overflow-hidden rounded-full"
                    >
                      <img
                        alt="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                        title="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Amount
            </div>
            <div
              class="mt-2 font-semibold"
            >
              0.09660435 ARK
            </div>
          </div>
          <div
            class="text-theme-danger ml-1"
          >
            <div
              class="sc-AxiKw jQtkkF bg-theme-background border-theme-danger-200"
            >
              <div
                class="sc-AxhUy dFCItS"
                height="50"
                width="50"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Transaction Type
            </div>
            <div
              class="mt-2 font-semibold"
            >
              Vote
            </div>
          </div>
          <div
            class="text-theme-danger ml-1"
          >
            <div
              class="sc-AxiKw jQtkkF bg-theme-background border-black"
            >
              <div
                class="sc-AxhUy cPXLjK text-black"
                height="1em"
                width="1em"
              >
                <svg>
                  voted.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
